// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generate JSON with a custom extension matcher: generateJSON: custom extension matcher 1`] = `
"{
  \\"admin\\": {
    \\"users\\": {
      \\"$id\\": {
        \\"types\\": \\"/admin/users/[id]/types\\",
        \\"__dir\\": \\"/admin/users/[id]\\"
      },
      \\"__dir\\": \\"/admin/users\\"
    },
    \\"__dir\\": \\"/admin\\"
  }
}"
`;

exports[`generate JSON with custom dirkey: __customDir__: generateJSON: custom dirkey 1`] = `
"{
  \\"admin\\": {
    \\"users\\": {
      \\"$id\\": {
        \\"index\\": \\"/admin/users/[id]\\",
        \\"posts\\": {
          \\"$postId\\": \\"/admin/users/[id]/posts/[post_id]\\",
          \\"l$shortLink$L\\": \\"/admin/users/[id]/posts/l-[short-link]-l\\",
          \\"s$slug\\": \\"/admin/users/[id]/posts/s-[slug]\\",
          \\"__customDir__\\": \\"/admin/users/[id]/posts\\"
        }
      },
      \\"index\\": \\"/admin/users\\"
    },
    \\"__customDir__\\": \\"/admin\\"
  },
  \\"index\\": \\"/\\",
  \\"me\\": \\"/me\\",
  \\"signIn\\": \\"/sign-in\\",
  \\"signUp\\": \\"/sign-up\\"
}"
`;

exports[`generate JSON with custom ignorePatterns: ^_,^assets: generateJSON: custom ignorePatterns 1`] = `
"{
  \\"admin\\": {
    \\"users\\": {
      \\"$id\\": {
        \\"index\\": \\"/admin/users/[id]\\",
        \\"posts\\": {
          \\"$postId\\": \\"/admin/users/[id]/posts/[post_id]\\",
          \\"l$shortLink$L\\": \\"/admin/users/[id]/posts/l-[short-link]-l\\",
          \\"s$slug\\": \\"/admin/users/[id]/posts/s-[slug]\\",
          \\"__dir\\": \\"/admin/users/[id]/posts\\"
        }
      },
      \\"index\\": \\"/admin/users\\"
    },
    \\"__dir\\": \\"/admin\\"
  },
  \\"index\\": \\"/\\",
  \\"me\\": \\"/me\\",
  \\"signIn\\": \\"/sign-in\\",
  \\"signUp\\": \\"/sign-up\\"
}"
`;

exports[`generate JSON with default options: generateJSON: default 1`] = `
"{
  \\"admin\\": {
    \\"users\\": {
      \\"$id\\": {
        \\"index\\": \\"/admin/users/[id]\\",
        \\"posts\\": {
          \\"$postId\\": \\"/admin/users/[id]/posts/[post_id]\\",
          \\"l$shortLink$L\\": \\"/admin/users/[id]/posts/l-[short-link]-l\\",
          \\"s$slug\\": \\"/admin/users/[id]/posts/s-[slug]\\",
          \\"__dir\\": \\"/admin/users/[id]/posts\\"
        }
      },
      \\"index\\": \\"/admin/users\\"
    },
    \\"__dir\\": \\"/admin\\"
  },
  \\"index\\": \\"/\\",
  \\"me\\": \\"/me\\",
  \\"signIn\\": \\"/sign-in\\",
  \\"signUp\\": \\"/sign-up\\"
}"
`;

exports[`generate JSON with depth of 1: generateJSON: depth 1 1`] = `
"{
  \\"index\\": \\"/\\",
  \\"me\\": \\"/me\\",
  \\"signIn\\": \\"/sign-in\\",
  \\"signUp\\": \\"/sign-up\\"
}"
`;
